# Medical-AI-Hub

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requiremnets.txt
Notebooks/: Blood_Cancer_Model.ipynb  Cells Model.ipynb  Chest_Model.ipynb  MRI_Model.ipynb  Type_Model.ipynb
templates/: index.html
